--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -18,6 +18,7 @@ Profile
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Username: {{ user.username }}</li>
             <li class="list-group-item">Email: {{ user.email }}</li>
+            <li class="list-group-item">Role: {{ role  }}</li>
           </ul><br />
           <h6>Biography:</h6>
           <p class="card-text">{{ user.profile.bio }}</p>
